--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="game-container">
         <h1 class="title">Emoji Pop Game</h1>
         <div class="button-container">
-            <button id="dark-mode-button">Dark Mode</button>
+            <button id="dark-mode-button" aria-label="Toggle Dark Mode">Dark Mode</button>
             <button id="how-to-play-button">How to Play</button>
         </div>
         <div class="score-container">
@@ -19,7 +19,7 @@
         <div id="emoji-grid"></div>
         <div class="game-menu">
             <button id="start-button">Start Game</button>
-            <button id="stop-button">Stop Game</button>
+            <button id="stop-button" style="display: none;">Stop Game</button>
             <button id="restart-button" style="display: none;">Restart</button>
         </div>
     </div>
